<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/Home_Menu"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/usinglinearlayout"
        android:textSize="14sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/relativelayoutdesc"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/rlayoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relativelayout" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="asdasd"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/constraintlayoutdesc"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/clayoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraintlayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:contentDescription="sdasdasd"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gridlayoutdesc"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/gridlayoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gridlayout" />



</LinearLayout>
